<resources>
    <string name="app_name">P0 My App Portfolio</string>

    <string name="main_activity_title">My Nanodegree Apps!</string>

    <string name="main_activity_button_popular_movies">POPULAR MOVIES</string>
    <string name="main_activity_button_stock_hawk">STOCK HAWK</string>
    <string name="main_activity_button_build_it_bigger">BUILD ID BIGGER</string>
    <string name="main_activity_button_make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="main_activity_button_go_ubiquitous">GO UBIQUITOUS</string>
    <string name="main_activity_button_capstone">CAPSTONE</string>
    <string name="main_activity_toast_text">"This button will launch my change app!"</string>

</resources>
