<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/background_light"
    tools:context="com.example.android.rafao1991.p0myappportfolio.MainActivity">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/main_activity_title"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    <Button
        android:id="@+id/button_popular_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_05"
        android:layout_marginRight="@dimen/margin_60"
        android:layout_marginLeft="@dimen/margin_60"
        android:layout_below="@id/text_view_title"
        android:background="@drawable/main_button_selector"
        android:text="@string/main_activity_button_popular_movies"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/button_stock_hawk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_05"
        android:layout_marginRight="@dimen/margin_60"
        android:layout_marginLeft="@dimen/margin_60"
        android:layout_below="@id/button_popular_movies"
        android:background="@drawable/main_button_selector"
        android:text="@string/main_activity_button_stock_hawk"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/button_build_it_bigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_05"
        android:layout_marginRight="@dimen/margin_60"
        android:layout_marginLeft="@dimen/margin_60"
        android:layout_below="@id/button_stock_hawk"
        android:background="@drawable/main_button_selector"
        android:text="@string/main_activity_button_build_it_bigger"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/button_make_your_app_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_05"
        android:layout_marginRight="@dimen/margin_60"
        android:layout_marginLeft="@dimen/margin_60"
        android:layout_below="@id/button_build_it_bigger"
        android:background="@drawable/main_button_selector"
        android:text="@string/main_activity_button_make_your_app_material"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/button_go_ubiquitous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_05"
        android:layout_marginRight="@dimen/margin_60"
        android:layout_marginLeft="@dimen/margin_60"
        android:layout_below="@id/button_make_your_app_material"
        android:background="@drawable/main_button_selector"
        android:text="@string/main_activity_button_go_ubiquitous"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/button_capstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_05"
        android:layout_marginRight="@dimen/margin_60"
        android:layout_marginLeft="@dimen/margin_60"
        android:layout_below="@id/button_go_ubiquitous"
        android:background="@drawable/main_button_selector"
        android:text="@string/main_activity_button_capstone"
        android:textColor="@color/colorAccent"/>

</RelativeLayout>
